# interpax_fft

./: .buildinfo  .gitattributes  CITATION.cff  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  api.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/: CONTRIBUTING.rst  dependabot.yml
.github/workflows/: black.yml  docs.yml  (+6 more)
_api/: interpax_fft.DoubleChebyshevSeries.html  interpax_fft.FourierChebyshevSeries.html  interpax_fft.PiecewiseChebyshevSeries.html  interpax_fft.cheb_from_dct.html  interpax_fft.cheb_pts.html  interpax_fft.dct_from_cheb.html  interpax_fft.epigraph_and.html  interpax_fft.fourier_pts.html  interpax_fft.idct_mmt.html  interpax_fft.ifft_mmt.html  interpax_fft.interp_dct.html  interpax_fft.interp_rfft.html  interpax_fft.interp_rfft2.html  interpax_fft.irfft2_mmt_pos.html  interpax_fft.irfft_interp1d.html  interpax_fft.irfft_interp2d.html  interpax_fft.irfft_mmt.html  interpax_fft.irfft_mmt_pos.html  interpax_fft.rfft2_modes.html  interpax_fft.rfft2_vander.html  interpax_fft.rfft_interp1d.html  interpax_fft.rfft_interp2d.html  interpax_fft.rfft_to_trig.html  interpax_fft.take_mask.html  interpax_fft.trig_vander.html
_sources/: api.rst.txt
_static/: documentation_options.js
devtools/: requirements-dev.txt
docs/: api.rst  conf.py
interpax_fft/: __init__.py  _fft.py  _interp_utils.py  _mmt.py  _series.py  _utils.py  _utils_private.py  _utils_public.py  _version.py
tests/: __init__.py  test_fft.py  test_interp_utils.py  test_mmt.py
(+25 files in other folders)
