[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=42", "versioneer-518"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["interpax_fft/*.py", "tests/*.py"]
exclude = ["interpax_fft/_version.py", "versioneer.py", "docs/conf.py",
]
